Sudah bisa masuk IDCloudHost

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,10 @@ GOOGLE_CLIENT_SECRET=""
 # Isikan bebas
 mysecretkey=""
 
+# Cek di Github/setting/application
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# IDCH
+IDCH_CLIENT_ID=""
+IDCH_CLIENT_SECRET=""
